<?xml version="1.0" encoding="utf-8"?>
<preference-headers
        xmlns:android="http://schemas.android.com/apk/res/android">
    <header
            android:fragment="AU.MightyFour.Sitcomizer.GestureSettingsFragment"
            android:icon="@drawable/ic_gesture"
            android:summary="@string/header1_summary"
            android:title="@string/header1_title">
    </header>
    <header
            android:fragment="AU.MightyFour.Sitcomizer.NetworkSettingsFragment"
            android:icon="@drawable/ic_wifi"
            android:summary="@string/header2_summary"
            android:title="@string/header2_title">
    </header>
    <header
            android:fragment="AU.MightyFour.Sitcomizer.AlarmSettingsFragment"
            android:icon="@drawable/ic_alarm"
            android:summary="@string/header3_summary"
            android:title="@string/header3_title">
    </header>
</preference-headers>